add style in scss to app, list and search, and create a input component

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "sourceType": "module",
     "ecmaVersion": 8,
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "experimentalObjectRestSpread": true
     }
   },
   "env": {
