--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-markdown": "^3.3.4",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
